# addy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
addy/: __init__.py  cli.py  config.py  exceptions.py  git_ops.py  sudo_manager.py  user_manager.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_git_ops.py  test_sudo_manager.py  test_user_manager.py
tests/integration/: test_integration.py  test_remove_options.py  test_smoke.py
